@@ -2,7 +2,7 @@ include config.mk
 
 VERSION := $(shell perl -ne 'print "$$1\n" if /^sunuo \((.*?)\)/' debian/changelog |head -1)
 DISTDIR = build/sunuo-$(VERSION)-bin
-DISTDLL = MySql.Data.dll
+DISTDLL = MySql.Data.dll Npgsql.dll
 
 MCS_FLAGS += -unsafe -define:MONO -debug -lib:build/lib
 
@@ -77,6 +77,18 @@ build/lib/MySql.Data.dll: download/mysql-connector-net-1.0.7-noinstall.zip
 	unzip -q -d build/tmp download/mysql-connector-net-1.0.7-noinstall.zip
 	mkdir -p build/lib
 	cp build/tmp/bin/mono-1.0/release/MySql.Data.dll build/lib/
+	rm -rf build/tmp
+
+download/Npgsql1.0beta1-bin.tar.bz2:
+	mkdir -p $(dir $@)
+	wget http://pgfoundry.org/frs/download.php/531/Npgsql1.0beta1-bin.tar.bz2 -O $@.tmp
+	mv $@.tmp $@
+
+build/lib/Npgsql.dll: download/Npgsql1.0beta1-bin.tar.bz2
+	rm -rf build/tmp && mkdir -p build/tmp
+	tar xjfC $< build/tmp
+	unzip -q -d build/tmp download/mysql-connector-net-1.0.7-noinstall.zip
+	cp build/tmp/Npgsql/bin/mono/Npgsql.dll build/lib/
 	rm -rf build/tmp
 
 # documentation targets
