@@ -1,6 +1,7 @@
 sunuo (0.2.2) unstable; urgency=low
 
   * don't use nested Makefiles
+  * distribute Mysql.Data.dll and Npgsql.dll
 
  --
 
